[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ────────────────────────────────────────────────
[project]
name = "portfolio-rl"
version = "0.1.0"
description = "Risk-Aware RL Portfolio Optimization with CVaR control"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Alejandro Gomez Ruiz"}]

# Dependencies: only what we need NOW (PR0-PR3). RL deps added later.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",          # parquet read/write
    "yfinance>=0.2.36",       # market data download
    "matplotlib>=3.8",        # plotting
    "pyyaml>=6.0",            # config files
    "mlflow>=2.10",           # experiment tracking
]

# Optional groups — install with: pip install -e ".[dev]" or ".[rl]"
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.2",
    "pre-commit>=3.6",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "torch>=2.1",
]

# ── Tool configuration ──────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # bugbear (common pitfalls)
    "SIM",  # simplify
]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
